--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <<script src="fretboard.js"></script>
+  <script src="fretboard.js"></script>
   <title>Fretboard</title>
 </head>
 <body>
