new version with separate js files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="fretboard.js" defer></script>
-  <title>Fretboard</title>
+    <title>My D3.js Project</title>
 </head>
 <body>
-  <h1>Fretboard</h1>
+    <div id="container"></div>
+    <script src="js/d3.v7.js"></script>
+    <script type="module" src="js/guitarneck.js"></script> <!-- Your D3.js code -->
 </body>
 </html>
