--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <div id="container"></div>
     <script src="js/d3.v7.js"></script>
     <script type="module" src="js/guitarneck.js"></script> <!-- Your D3.js code -->
+    
+    <select id="baseNoteSelect" onchange="changeBaseNote(this.value)">
+        <option value="C">C</option>
+        <option value="C#">C#</option>
+        <option value="D">D</option>
+        <option value="D#">D#</option>
+        <option value="E">E</option>
+        <option value="F">F</option>
+        <option value="F#">F#</option>
+        <option value="G">G</option>
+        <option value="G#">G#</option>
+        <option value="A">A</option>
+        <option value="A#">A#</option>
+        <option value="B">B</option>
+      </select>
+
+    <label>
+    <input type="checkbox" id="noteNamesCheckbox" onclick="toggleNoteNames()"> Show Note Names
+    </label>
 </body>
 </html>
