make highlight work for only-basenote and for pentatonic scale, also changing the basenote seems to work

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
     <label>
     <input type="checkbox" id="noteNamesCheckbox" onclick="toggleNoteNames()"> Show Note Names
     </label>
+
+    <h3>Select Highlight</h3>
+    <label>
+        <input type="radio" name="highlightMode" value="basenote" onclick="selectHighlightMode('BASENOTE')" checked> Basenote
+    </label>
+    <label>
+        <input type="radio" name="highlightMode" value="pentatonicScale" onclick="selectHighlightMode('PENTATONIC')"> Pentatonic Scale
+    </label>
 </body>
 </html>
