set Show Note Names checked as default

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       </select>
 
     <label>
-    <input type="checkbox" id="noteNamesCheckbox" onclick="toggleNoteNames()"> Show Note Names
-    </label>
+        <input type="checkbox" id="noteNamesCheckbox" onclick="toggleNoteNames()" checked> Show Note Names    </label>
 
     <h3>Select Highlight</h3>
     <label>
