slide movement changes the base note, and also reflects that to html drop-down menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/d3.v7.js"></script>
     <script type="module" src="js/guitarneck.js"></script> <!-- Your D3.js code -->
     
-    <select id="baseNoteSelect" onchange="changeBaseNote(this.value)">
+    <select id="baseNoteSelectDropdown" onchange="changeBaseNote(this.value)">
         <option value="C">C</option>
         <option value="C#">C#</option>
         <option value="D">D</option>
