change to minified d3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div id="container"></div>
-    <script src="js/d3.v7.js"></script>
+    <script src="js/d3.v7.min.js"></script>
     <script type="module" src="js/guitarneck.js"></script> <!-- Your D3.js code -->
     
     <select id="baseNoteSelectDropdown" onchange="changeBaseNote(this.value)">
