--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </select>
 
     <label>
-        <input type="checkbox" id="noteNamesCheckbox" onclick="toggleNoteNames()" checked>
-        Show Note Names
+        <input type="checkbox" id="noteNamesCheckbox" onchange="handleCheckboxChange(this)" checked>
+        Show Notes
     </label>
 
     <h3>Select Highlight</h3>
