Set the web page radio button according to the stored value of highlightMode, at every reload

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <h3>Select Highlight</h3>
     <label>
-        <input type="radio" name="highlightMode" value="basenote" onclick="selectHighlightMode('BASENOTE')" checked>
+        <input type="radio" name="highlightMode" value="BASENOTE" onclick="selectHighlightMode('BASENOTE')" checked>
         Basenote
     </label>
     <label>
-        <input type="radio" name="highlightMode" value="pentatonicScale" onclick="selectHighlightMode('PENTATONIC')">
+        <input type="radio" name="highlightMode" value="PENTATONIC" onclick="selectHighlightMode('PENTATONIC')">
         Pentatonic Scale
     </label>
     <script src="js/d3.v7.min.js"></script>
