--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="guitar, music">
     <meta name="author" content="Mika Kutila">
     <title>Fretboard</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="fretboard_container"></div>
@@ -56,7 +57,6 @@
         <input type="radio" name="highlightMode" value="PENTATONIC" onclick="selectHighlightMode('PENTATONIC')">
         <span id="pentatonicScaleKeyLabel">Pentatonic Scale</span>
     </label>
-    <script src="js/d3.v7.min.js"></script>
     <script type="module" src="js/guitarneck.js"></script>
 </body>
 </html>
