Add header to the web page.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <h2 id="fretboardHeader"></h2>
     <div id="fretboard_container"></div>
    
     <h4>Base Note:</h4>
