Fret count shown can be adjusted.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
       <span id="zoomLevelDisplay"></span>
       <button id="zoomInBtn" title="Zoom in">+</button>
     </div>
+    <div style="margin-top:12px;">
+      <label for="fretCountInput">Frets:</label>
+      <input type="number" id="fretCountInput" min="2" max="24" value="12" style="width:4em;" />
+      <small>(2-24)</small>
+    </div>
     <script type="module" src="js/guitarneck.js"></script>
 </body>
 </html>
