Change fret number colour when dark/light mode changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         --button-bg1:#262f37; --button-bg2:#1f272e; --button-bg-hover2:#273039;
         --focus-ring: 0 0 0 3px rgba(120,180,255,0.4);
       }
+      /* Fret number theming */
+      .fret-numbers { fill:#111; }
+      body.dark .fret-numbers { fill:#fafbfc; }
       body { font-family: system-ui, Arial, sans-serif; margin:18px; line-height:1.35; background:var(--bg); color:var(--text); transition: background .25s, color .25s; }
       h2 { margin-top:0; color:var(--heading); }
       #fretboard_container { margin-bottom:16px; }
