--- a/index.html
+++ b/index.html
@@ -141,19 +141,25 @@
     <script>
       (function(){
         const KEY='theme';
-        const stored = localStorage.getItem(KEY);
         const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-        if(stored==='dark' || (!stored && prefersDark)) document.body.classList.add('dark');
+        let storedRaw = localStorage.getItem(KEY);
+        let stored;
+        try { stored = storedRaw === null ? null : JSON.parse(storedRaw); } catch { stored = storedRaw; }
+        if (stored === 'dark' || (!stored && prefersDark)) {
+          document.body.classList.add('dark');
+        }
+        function persist(val){ try { localStorage.setItem(KEY, JSON.stringify(val)); } catch {} }
         function updateLabel(){
           const btn=document.getElementById('themeToggleBtn'); if(!btn) return;
           const dark = document.body.classList.contains('dark');
-            btn.textContent = dark ? 'Light Theme' : 'Dark Theme';
-            btn.setAttribute('aria-pressed', dark?'true':'false');
+          btn.textContent = dark ? 'Light Theme' : 'Dark Theme';
+          btn.setAttribute('aria-pressed', dark?'true':'false');
         }
         document.getElementById('themeToggleBtn').addEventListener('click',()=>{
-          document.body.classList.toggle('dark');
-          localStorage.setItem(KEY, document.body.classList.contains('dark') ? 'dark' : 'light');
-          updateLabel();
+          const willBeDark = !document.body.classList.contains('dark');
+            document.body.classList.toggle('dark');
+            persist(willBeDark ? 'dark' : 'light');
+            updateLabel();
         });
         updateLabel();
       })();
