Add intrument selection for ukulele, bass and guitar.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
       <div class="panel" aria-labelledby="panel-settings">
         <h4 id="panel-settings">Settings</h4>
         <hr class="divider" />
+        <div class="number-input-row" style="margin-bottom:6px;">
+          <label for="instrumentTypeSelect">Instrument:</label>
+          <select id="instrumentTypeSelect" class="stretch" aria-label="Select instrument / string count">
+            <option value="guitar6">Guitar (6)</option>
+            <option value="bass4">Bass (4)</option>
+            <option value="ukulele4">Ukulele (4)</option>
+          </select>
+        </div>
         <div class="number-input-row">
           <label for="fretCountInput">Frets:</label>
           <select id="fretCountInput" class="stretch" aria-label="Select fret count">
